# displayxr-demo-earthview

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  PRD.md  README.md  settings.gradle
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  main.cpp  stb_impl.c
android/src/main/java/com/displayxr/earthview_vk_android/: MainActivity.kt
common/: CMakeLists.txt
docs/: M1_KICKOFF.md  api-key.md  m3-android-plan.md  rendering-notes.md  roadmap.md
installer/macos/: Distribution.xml  build_installer.sh  create_app_bundle.sh
installer/macos/resources/: welcome.html
installer/windows/: DisplayXREarthViewInstaller.nsi  build-installer.bat
linux/: CMakeLists.txt  main.cpp  stb_image_write_impl.cpp
macos/: CMakeLists.txt  main.mm
macos/displayxr/: earthview_handle_vk_macos.displayxr.json
openxr_includes/openxr/: XR_EXT_atlas_capture.h
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  dev_register.bat  run_earthview_linux.sh  run_macos_dev.sh  run_windows_dev.bat  sign-release.ps1
spike/: CMakeLists.txt  main.cpp
tiles_common/: CMakeLists.txt  geo_math.cpp  geo_math.h  model_renderer.h  tile_engine.cpp  tile_engine.h  tile_renderer.cpp  tile_renderer.h
tiles_common/shaders/: tile.frag  tile.vert
windows/: CMakeLists.txt  earthview_handle_vk_win.manifest  main.cpp  resource.rc  xr_session.cpp  xr_session.h
